--- a/src/app/components/manage-item/manage-item.component.html
+++ b/src/app/components/manage-item/manage-item.component.html
@@ -1,6 +1,6 @@
 <div class='pad10'>
   <mat-card-title>Manage list <b>{{ header.name }}</b></mat-card-title>
 </div>
-<button mat-mini-fab color="primary" type="button" class="add-fab" matTooltip="Add item">
+<button mat-mini-fab color="primary" type="button" class="add-fab" matTooltip="Add item" (click)="addItem()">
   <mat-icon>add</mat-icon>
 </button>
