--- a/src/app/components/manage-item/manage-item.component.html
+++ b/src/app/components/manage-item/manage-item.component.html
@@ -1,5 +1,29 @@
 <div class='pad10'>
-  <mat-card-title>Manage list <b>{{ header.name }}</b></mat-card-title>
+  <mat-card-title>Manage list <b [contentEditable]="true" (keypress)="onKeypress($event)" (input)="onNameChanged($event)">{{ title }}</b></mat-card-title><br />
+
+  <button *ngIf="itemSubject$ | async" mat-icon-button aria-label="Clear item list" (click)="confirmClear()">
+    <mat-icon>delete_sweep</mat-icon>
+  </button>
+
+  <button mat-icon-button aria-label="Delete list" (click)="confirmDelete()">
+    <mat-icon>delete_forever</mat-icon>
+  </button>
+
+  <div class="list-item" *ngIf="itemSubject$ | async as items; else loading">
+    <mat-card-subtitle>Existing items</mat-card-subtitle>
+
+    <mat-nav-list>
+      <a mat-list-item *ngFor="let item of items" [routerLink]="['/EditItem', header.id, item.id]">{{ item.text }}</a>
+    </mat-nav-list>
+
+  </div>
+
+  <ng-template #loading>
+    <div class="no-item">
+      No item defined yet
+    </div>
+  </ng-template>
+
 </div>
 <button mat-mini-fab color="primary" type="button" class="add-fab" matTooltip="Add item" (click)="addItem()">
   <mat-icon>add</mat-icon>
