--- a/src/app/components/manage-list/manage-list.component.html
+++ b/src/app/components/manage-list/manage-list.component.html
@@ -1,11 +1,11 @@
-<div #container fxLayout="column" fxLayoutAlign="stretch stretch">
+<div fxLayout="column" fxLayoutAlign="stretch stretch">
 
   <div class='pad10' fxFlexFill>
-    <mat-card-title>List Management</mat-card-title>
+    <mat-card-title>List Management</mat-card-title><br />
 
     <form *ngIf="formVisible" (submit)="formSubmitted($event)">
 
-      <mat-form-field class="example-form-field" style='width: 150px;'>
+      <mat-form-field style='width: 150px;'>
         <mat-label>List name</mat-label>
         <input name="txtListName" matInput type="text" [(ngModel)]="listName">
       </mat-form-field>
@@ -18,14 +18,14 @@
 
     </form>
 
-    <div *ngIf="headers">
+    <!-- <div *ngIf="headers"> -->
       <mat-card-subtitle>Existing lists</mat-card-subtitle>
-      <div #scrollDiv class='prel scroll'>
+      <div class='scroll-container'>
         <mat-nav-list>
-          <a mat-list-item *ngFor="let header of headers" [routerLink]="['/ManageItem', header.id]">{{ header.name }}</a>
+          <a mat-list-item *ngFor="let header of sortedHeaders" [routerLink]="['/ManageItem', header.id]">{{ header.name }}</a>
         </mat-nav-list>
       </div>
-    </div>
+    <!-- </div> -->
 
     <button mat-mini-fab color="primary" type="button" (click)="toggleFormVisibility()" class="add-fab"
       matTooltip="Add list">
