--- a/src/app/components/manage-list/manage-list.component.scss
+++ b/src/app/components/manage-list/manage-list.component.scss
@@ -9,6 +9,9 @@
   left: auto;
 }
 
-.scroll {
+.scroll-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 78vh;
   overflow: auto;
 }
