Almost ready to PWA this

--- a/src/app/components/check-item/check-item.component.html
+++ b/src/app/components/check-item/check-item.component.html
@@ -1,14 +1,18 @@
 <div fxLayout='row'>
-  <div class="check-item" fxFlex="40">
-    <mat-checkbox class='kingsize' color="primary"> {{ item?.text }}</mat-checkbox>
+
+  <div class="check-item kingsize" fxFlex="40" *ngIf="item">
+    <mat-checkbox color="primary" (change)="onCheckboxChange($event, 0)" [checked]="item.checked">
+      {{ item?.text }}</mat-checkbox>
   </div>
 
   <div fxFlex="30" *ngIf="subItems.length > 0">
-    <mat-checkbox color="primary"> {{ subItems[0].text }}</mat-checkbox>
-
+    <mat-checkbox color="primary" (change)="onCheckboxChange($event, 1)" [checked]="subItems[0].checked">
+      {{ subItems[0].text }}</mat-checkbox>
   </div>
+
   <div fxFlex="30" *ngIf="subItems.length > 1">
-    <mat-checkbox color="primary"> {{ subItems[1].text }}</mat-checkbox>
-
+    <mat-checkbox color="primary" (change)="onCheckboxChange($event, 2)" [checked]="subItems[1].checked">
+      {{ subItems[1].text }}</mat-checkbox>
   </div>
+
 </div>
