--- a/src/app/components/check-list/check-list.component.html
+++ b/src/app/components/check-list/check-list.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let item of items" class='pad10'>
+<div *ngFor="let item of items" class='pad10 my-pad'>
   <app-check-item [item]="item"></app-check-item>
 </div>
