Sorting, bug fixes, menu cleanup

--- a/src/app/components/check-item/check-item.component.html
+++ b/src/app/components/check-item/check-item.component.html
@@ -1,6 +1,6 @@
 <div fxLayout='row'>
 
-  <div class="check-item kingsize" fxFlex="40" *ngIf="item">
+  <div class="main-item kingsize" fxFlex="40" *ngIf="item">
     <mat-checkbox color="primary" (change)="onCheckboxChange($event, 0)" [checked]="item.checked">
       {{ item?.text }}</mat-checkbox>
   </div>
