--- a/src/app/components/liste/liste.component.html
+++ b/src/app/components/liste/liste.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group #tabgroup *ngIf="loaded">
 
-  <mat-tab *ngFor="let header of sortedHeaders" label="{{ header.name }}">
+  <mat-tab *ngFor="let header of sortedHeaders" label="{{ getLabel(header) }}">
     <app-check-list [idHeader]="header.id"></app-check-list>
   </mat-tab>
 
