--- a/src/app/components/check-list/check-list.component.html
+++ b/src/app/components/check-list/check-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let item of sortedItems" class='pad10 my-pad'>
-  <app-check-item [item]="item"></app-check-item>
+  <app-check-item [item]="item" (checkChange)="onCheckChange()"></app-check-item>
 </div>
