--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -5,13 +5,20 @@
 
     <mat-nav-list>
 
-      <a *ngIf="isHandset$ | async" mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">List</a>
-      <a *ngIf="!(isHandset$ | async)" mat-list-item href="#" [routerLink]="['/Liste']">List</a>
-      <a *ngIf="isHandset$ | async" mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">Consolidated</a>
-      <a *ngIf="!(isHandset$ | async)" mat-list-item href="#" [routerLink]="['/Liste']">Consolidated</a>
-      <mat-divider></mat-divider>
-      <a *ngIf="isHandset$ | async" mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/ManageList']">Manage List</a>
-      <a *ngIf="!(isHandset$ | async)" mat-list-item href="#" [routerLink]="['/ManageList']">Manage List</a>
+      <div *ngIf="isHandset$ | async">
+        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">Consolidated</a>
+        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">List</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/ManageList']">Manage List</a>
+        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Dump']">Dump Database</a>
+      </div>
+
+      <div *ngIf="!(isHandset$ | async)">
+        <a mat-list-item href="#" [routerLink]="['/Liste']">List</a>
+        <a mat-list-item href="#" [routerLink]="['/Liste']">Consolidated</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item href="#" [routerLink]="['/ManageList']">Manage List</a>
+      </div>
 
     </mat-nav-list>
   </mat-sidenav>
