Rx/Js Ok ready to add list subject

--- a/src/app/components/dump-database/dump-database.component.html
+++ b/src/app/components/dump-database/dump-database.component.html
@@ -1,1 +1,6 @@
+<div>
+  <button type="button" mat-icon-button [cdkCopyToClipboard]="json">
+    <mat-icon>copy_all</mat-icon>
+  </button>
+</div>
 <pre #dumpzone></pre>
