--- a/src/app/components/manage-list/manage-list.component.html
+++ b/src/app/components/manage-list/manage-list.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="stretch stretch">
 
   <div class='pad10' fxFlexFill>
-    <mat-card-title>List Management</mat-card-title><br />
+    <mat-card-header>List Management</mat-card-header><br />
 
     <form *ngIf="formVisible" (submit)="formSubmitted($event)">
 
