--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -9,7 +9,7 @@
         <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">List</a>
         <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Liste']">Consolidated</a>
         <mat-divider></mat-divider>
-        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/ManageList']">Manage List</a>
+        <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage']">Manage</a>
         <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Dump']">Dump Database</a>
       </div>
 
@@ -17,7 +17,7 @@
         <a mat-list-item href="#" [routerLink]="['/Liste']">List</a>
         <a mat-list-item href="#" [routerLink]="['/Liste']">Consolidated</a>
         <mat-divider></mat-divider>
-        <a mat-list-item href="#" [routerLink]="['/ManageList']">Manage List</a>
+        <a mat-list-item href="#" [routerLink]="['/Manage']">Manage</a>
       </div>
 
     </mat-nav-list>
@@ -29,7 +29,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span><b>Lister</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
+      <span><b>Lister 0.2</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
