--- a/src/app/components/manage-category/manage-category.component.html
+++ b/src/app/components/manage-category/manage-category.component.html
@@ -26,7 +26,7 @@
     <mat-card-subtitle>Existing categories</mat-card-subtitle>
     <div class='scroll-container'>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let category of sortedCategories" (click)="onCategoryClick(category)">
+        <a mat-list-item [ngClass]="{'fb': category.isDefault}" *ngFor="let category of sortedCategories" (click)="onCategoryClick(category)">
           <!--  [routerLink]="['/ManageItem', header.id]"-->
           {{ category.name }}
         </a>
