--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -16,7 +16,11 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <a mat-list-item [ngClass]="{'fb': cat.isDefault}" *ngFor="let cat of categories" href="#" (click)="onCategoryClick($event, drawer, cat)" >{{ cat.name }}</a>
+            <a mat-list-item
+              *ngFor="let cat of categories" href="#"
+              (click)="drawer.toggle()"
+              [routerLink]="['/Liste', cat.id]"
+              [ngClass]="{'fb': cat.isDefault}">{{ cat.name }}</a>
 
           </mat-expansion-panel>
         </mat-accordion>
@@ -40,7 +44,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span><b>Lister 0.3a</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
+      <span><b>Lister 0.3d</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
