--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+
+/************************
+ Theming related includes
+************************/
+
+@import '~@angular/material/theming';
+@include mat-core();
+
+
+/************************
+ Default global styles
+************************/
+
 html,
 body {
   height: 100%;
@@ -49,3 +62,37 @@ body {
 .fb {
   font-weight: bold;
 }
+
+
+/************************
+ Theming section
+************************/
+
+// Custom themable components
+@import "app/components/main-nav/main-nav.component";
+
+@mixin custom-components-theme($theme) {
+  @include sidenav-theme($theme);
+}
+
+// Light theme
+$light-primary: mat-palette($mat-indigo);
+$light-accent:  mat-palette($mat-pink, A200, A100, A400);
+$light-theme:   mat-light-theme($light-primary, $light-accent);
+
+.light-theme {
+  @include angular-material-theme($light-theme);
+  @include custom-components-theme($light-theme);
+}
+
+// Dark theme
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
+$dark-warn:    mat-palette($mat-deep-orange);
+$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
+.dark-theme {
+  @include angular-material-theme($dark-theme);
+  @include custom-components-theme($dark-theme);
+}
+
