--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,7 @@ body {
 
 /************************
  Theming section
+ From: https://medium.com/@PhilippKief/automatic-dark-mode-detection-in-angular-material-8342917885a0
 ************************/
 
 // Custom themable components
