--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -8,4 +8,12 @@
     <app-manage-category></app-manage-category>
   </mat-tab>
 
+  <mat-tab label="Backup Database">
+    <app-dump-database></app-dump-database>
+  </mat-tab>
+
+  <mat-tab label="Restore Database">
+    <app-restore-database></app-restore-database>
+  </mat-tab>
+
 </mat-tab-group>
