Refresh of consolidated list

--- a/src/app/components/list/consolidated-view/consolidated-view.component.html
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.html
@@ -7,5 +7,12 @@
       <app-check-list [header]="header"></app-check-list>
     </div>
   </div>
+  <br />
+  <br />
+  <br />
+
+  <button mat-mini-fab color="primary" type="button" (click)="onRefreshClick()" class="refresh-fab" matTooltip="Refresh view">
+    <mat-icon>refresh</mat-icon>
+  </button>
 
 </div>
