--- a/src/app/components/management/manage-item/manage-item.component.html
+++ b/src/app/components/management/manage-item/manage-item.component.html
@@ -1,14 +1,12 @@
 <div class='pad10'>
   <mat-card-title>Manage list
-    <b
-      [contentEditable]="true"
-      (keypress)="onKeypress($event)"
-      (input)="onNameChanged($event)">{{ title }}
+    <b [contentEditable]="true" (keypress)="onKeypress($event)" (input)="onNameChanged($event)">{{ title }}
     </b>
   </mat-card-title><br />
 
-  <mat-form-field class='cpc' *ngIf="categories" >
-    <mat-select placeholder="Category" name="category" (selectionChange)="onCategorySelected($event)" [(ngModel)]="header.idCategory">
+  <mat-form-field *ngIf="categories">
+    <mat-select placeholder="Category" name="category" (selectionChange)="onCategorySelected($event)"
+      [(ngModel)]="header.idCategory">
       <mat-option *ngFor="let cat of categories" [value]="cat.id">
         {{ cat.name }}
       </mat-option>
@@ -19,7 +17,8 @@
     <mat-card-subtitle>Existing items</mat-card-subtitle>
 
     <mat-nav-list>
-      <a mat-list-item *ngFor="let item of items" [routerLink]="['/EditItem', header.id, item.id]">{{ item.text }}</a>
+      <a mat-list-item *ngFor="let item of items" [routerLink]="['/Manage/EditItem', header.id, item.id]">{{ item.text
+        }}</a>
     </mat-nav-list>
 
   </div>
@@ -30,23 +29,24 @@
     </div>
   </ng-template>
 
-  <mat-toolbar class='pos-bottom' fxLayoutAlign="space-evenly center">
-
-    <button mat-icon-button aria-label="Diggiddine" (click)="goBack()">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
-
-    <button *ngIf="itemSubject$ | async" mat-icon-button aria-label="Clear item list" (click)="confirmClear()">
-      <mat-icon>delete_sweep</mat-icon>
-    </button>
-
-    <button mat-icon-button aria-label="Delete list" (click)="confirmDelete()">
-      <mat-icon>delete_forever</mat-icon>
-    </button>
-
-  </mat-toolbar>
-
 </div>
+
+<mat-toolbar class='pos-bottom cpc' fxLayoutAlign="space-evenly center">
+
+  <button mat-icon-button aria-label="Diggiddine" (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+
+  <button *ngIf="itemSubject$ | async" mat-icon-button aria-label="Clear item list" (click)="confirmClear()">
+    <mat-icon>delete_sweep</mat-icon>
+  </button>
+
+  <button mat-icon-button aria-label="Delete list" (click)="confirmDelete()">
+    <mat-icon>delete_forever</mat-icon>
+  </button>
+
+</mat-toolbar>
+
 <button mat-mini-fab color="primary" type="button" class="add-fab" matTooltip="Add item" (click)="addItem()">
   <mat-icon>add</mat-icon>
 </button>
