--- a/src/app/components/management/manage-list/manage-list.component.html
+++ b/src/app/components/management/manage-list/manage-list.component.html
@@ -31,7 +31,7 @@
     <mat-card-subtitle>Existing lists</mat-card-subtitle>
     <div class='scroll-container'>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let header of sortedHeaders" [routerLink]="['/ManageItem', header.id]">
+        <a mat-list-item *ngFor="let header of sortedHeaders" [routerLink]="['/Manage/ManageItem', header.id]">
           {{ header.name }} {{ itemCount(header.id) }}
         </a>
       </mat-nav-list>
