--- a/src/app/components/management/manage-category/manage-category.component.html
+++ b/src/app/components/management/manage-category/manage-category.component.html
@@ -4,18 +4,33 @@
 
     <form *ngIf="formVisible" (submit)="formSubmitted($event)">
       <div>
-        <mat-form-field style='width: 150px;'>
-          <mat-label>Category name</mat-label>
-          <input name="txtListName" matInput type="text" [(ngModel)]="categoryName">
-        </mat-form-field>
-        &nbsp;<button mat-raised-button color="primary" [disabled]="categoryName===''">{{ actionVerb }}</button>&nbsp;
-        <button mat-raised-button color="accent" type="button" (click)="toggleFormVisibility()">
-          <mat-icon>close</mat-icon>
-        </button>
+
+        <div fxLayout='row'>
+          <div fxFlex="85">
+            <mat-form-field class='cpc'>
+              <mat-label>Category name</mat-label>
+              <input name="txtListName" matInput type="text" [(ngModel)]="categoryName">
+            </mat-form-field>
+          </div>
+          <div fxFlex="15">
+            <button mat-icon-button type="button" (click)="onDeleteCategory()">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </div>
+        <mat-checkbox color="primary" (change)="onCheckboxChange($event)" [checked]="categoryIsDefault">Default category
+          at startup
+        </mat-checkbox><br />
+        <br />
+
+        <div fxLayoutAlign="end center">
+          <button mat-raised-button color="primary" [disabled]="categoryName===''">{{ actionVerb }}</button>&nbsp;
+          <button mat-raised-button color="accent" type="button" (click)="toggleFormVisibility()">
+            Return
+          </button>&nbsp;
+        </div>
       </div>
 
-      <mat-checkbox color="primary" (change)="onCheckboxChange($event)" [checked]="categoryIsDefault">Default category at startup
-      </mat-checkbox><br />
 
       <br />
       <mat-divider></mat-divider>
@@ -26,7 +41,8 @@
     <mat-card-subtitle>Existing categories</mat-card-subtitle>
     <div class='scroll-container'>
       <mat-nav-list>
-        <a mat-list-item [ngClass]="{'fb': category.isDefault}" *ngFor="let category of sortedCategories" (click)="onCategoryClick(category)">
+        <a mat-list-item [ngClass]="{'fb': category.isDefault}" *ngFor="let category of sortedCategories"
+          (click)="onCategoryClick(category)">
           {{ category.name }}
         </a>
       </mat-nav-list>
