--- a/src/app/components/management/manage-item/manage-item.component.html
+++ b/src/app/components/management/manage-item/manage-item.component.html
@@ -1,17 +1,22 @@
 <div class='pad10'>
-  <mat-card-title>Manage list
-    <b [contentEditable]="true" (keypress)="onKeypress($event)" (input)="onNameChanged($event)">{{ title }}
-    </b>
-  </mat-card-title><br />
 
-  <mat-form-field *ngIf="categories">
-    <mat-select placeholder="Category" name="category" (selectionChange)="onCategorySelected($event)"
-      [(ngModel)]="header.idCategory">
-      <mat-option *ngFor="let cat of categories" [value]="cat.id">
-        {{ cat.name }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div>
+
+    <mat-card-title>Manage list
+      <b [contentEditable]="true" (keypress)="onKeypress($event)" (input)="onNameChanged($event)">{{ title }}
+      </b>
+    </mat-card-title><br />
+
+    <mat-form-field *ngIf="categories">
+      <mat-select placeholder="Category" name="category" (selectionChange)="onCategorySelected($event)"
+        [(ngModel)]="header.idCategory">
+        <mat-option *ngFor="let cat of categories" [value]="cat.id">
+          {{ cat.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+  </div>
 
   <div class="list-item" *ngIf="itemSubject$ | async as items; else loading">
     <mat-card-subtitle>Existing items</mat-card-subtitle>
@@ -33,7 +38,7 @@
 
 <mat-toolbar class='pos-bottom cpc' fxLayoutAlign="space-evenly center">
 
-  <button mat-icon-button aria-label="Diggiddine" (click)="goBack()">
+  <button mat-icon-button (click)="goBack()">
     <mat-icon>arrow_back</mat-icon>
   </button>
 
