--- a/src/app/components/management/manage-item/manage-item.component.scss
+++ b/src/app/components/management/manage-item/manage-item.component.scss
@@ -14,3 +14,23 @@
 .icon-kit {
   font-size: 9pt;
 }
+
+.list-item {
+  overflow-y: auto;
+}
+
+container {
+  display: flex;
+  flex-direction: column;
+}
+
+header,
+footer {
+  flex: none;
+}
+
+main {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  flex: auto;
+}
